# duckhub

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  build.rs  compose.yml  flake.nix
.cargo/: config.toml
.github/workflows/: release.yml
src/: api.rs  commands.rs  core.rs  error_handle.rs  main.rs  test_helpers.rs  ui.rs
src/api/: adapter.rs  connection.rs  dashboard.rs  graph.rs  model.rs  pipeline.rs  query.rs
src/commands/: new.rs  samples.rs  start.rs
src/commands/samples/: app_log_1.json  app_log_2.json  app_log_3.json  users.csv
src/core/: adapter.rs  config.rs  ducklake.rs  graph.rs  model.rs  pipeline.rs
src/core/adapter/: database.rs  file.rs  test_helpers.rs
src/core/adapter/database/: mysql.rs  postgresql.rs  sqlite.rs
src/core/adapter/file/: localfile.rs  s3.rs
src/core/config/: adapter.rs  dashboard.rs  model.rs  project.rs  query.rs  secret.rs
src/ui/: .prettierignore  .prettierrc.json  package.json  pnpm-lock.yaml  vite.config.ts
src/ui/src/: App.svelte  app.css  main.ts
src/ui/src/lib/: ChartComponent.svelte  EmptyState.svelte  Navigation.svelte  PipelineGraph.svelte  SettingsPanel.svelte  api.ts  config.ts  i18n.ts
src/ui/src/lib/components/: ErrorMessage.svelte  SqlEditor.svelte  ToastContainer.svelte
src/ui/src/lib/locales/: en.json  ja.json
src/ui/src/lib/panels/: AdapterPanel.svelte  ConnectionPanel.svelte  DashboardPanel.svelte  GraphPanel.svelte  ModelPanel.svelte  PipelineHistoryPanel.svelte  QueryPanel.svelte
src/ui/src/lib/types/: global.d.ts
src/ui/src/lib/utils/: formHandlers.ts
(+24 files in other folders)
