[package]
name = "duckhub"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "duckhub"
path = "src/main.rs"

[dependencies]
ring = "0.17"
base64 = "0.22"
anyhow = "1.0.98"
async-trait = "0.1"
aws-config = "1.0"
aws-sdk-s3 = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
duckdb = { version = "1.1.3", features = ["r2d2"] }
r2d2 = "0.8"
glob = "0.3"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
sqlparser = "0.58.0"
tempfile = "3.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.5.0", features = ["v4"] }
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
tower = { version = "0.5.1", features = ["util"] }
rust-embed = { version = "8.5.0", features = ["include-exclude"] }
mime_guess = "2.0.5"
rusqlite = "0.32"
num_cpus = "1.0"
open = "5"
tokio-util = "0.7.16"
futures = "0.3.31"
mysql = "25.0"
tokio-postgres = "0.7"

[build-dependencies]
anyhow = "1.0"

[features]
default = []
bundled = ["duckdb/bundled"]

[dev-dependencies]
rusqlite = "0.32"
mysql = "25.0"
tokio-postgres = "0.7"
rstest = "0.23"
typed-builder = "0.20"
axum-test = "18"
